chore: add the --add-opens JVM Option in build.gradle.kts for tests